fixed broken css

--- a/styles/weather.css
+++ b/styles/weather.css
@@ -20,7 +20,7 @@
 }
 
 #hourly-forecast {
-    height: 100%;
+    height: 93%;
     width: 100%;
     border-radius: 10px;
     overflow-y: scroll;
@@ -88,7 +88,7 @@
 
 #forecast-items {
     width: 100%;
-    height: 100%;
+    height: 94%;
     border-radius: 10px;
     overflow-y: scroll;
 }
@@ -137,7 +137,8 @@
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     background-color: aliceblue;
-    border-radius: 10px;
+    padding: 10px;
+    border-radius: 15px;
     grid-template-columns: 3fr 1fr;
 }
 
@@ -157,7 +158,6 @@
     border-top-right-radius: 10px;
     height: 100%;
     width: 100%;
-    margin: 10px 0px;
     grid-column: 2 / 3;
     background-color: rgb(72, 82, 102);
     color: aliceblue;
